<resources>
    <string name="app_name">Nasa App v1.0</string>
    <string name="open" >Open</string>
    <string name="close">Close</string>

    <!--Toolbar Strings -->
    <string name="menuHome" translatable="false">Home</string>
    <string name="menuProfile" translatable="false">Profile</string>
    <string name="menuPicOfDay" translatable="false">Picture of the day</string>
    <string name="menuPicRoulette" translatable="false">Picture Roulette</string>
    <string name="menuFavouritePic" translatable="false">Favourites</string>
    <string name="menuExit" translatable="false">Exit</string>
    <string name="help" translatable="false">Help</string>

    <!-- Main Activity Strings -->
    <string name="welcome" translatable="false">Nasa Image Picker is an app that allow you to
    select different images from NASA based on the date!</string>

    <!-- Alert box-->
    <string name="dialog_title" translatable="false">Warning</string>
    <string name="dialog_msg" translatable="false">This will open your browser!</string>
    <string name="btn_yes" translatable="false">Yes</string>
    <string name="btn_no" translatable="false">No</string>
    <string name="row_num" translatable="false">The selected row is:</string>
    <string name="delete" translatable="false">Do you want to delete this?</string>

    <!-- Image of the Day Strings -->
    <string name="browser_msg">Click the button below to be brought to the HD Image.</string>
    <string name="btn_hd">HD Image</string>
    <string name="btn_datePicker">Pick a date</string>
    <string name="btn_save">Save Image</string>
    <string name="no_data">No data to save</string>
    <string name="save_data">Data saved to database</string>


    <!-- Image Roulette Strings -->
    <string name="btn_roulette">Start Roulette!</string>
    <string name="btn_end">End Roulette!</string>

    <!-- Profile -->
    <string name="name_msg">Please enter your user name below:</string>
    <string name="avatar_msg">Please pick a Avatar below:</string>
    <string name="btn_profileSave">Save</string>
    <string name="profile_name">Name</string>
    <string name="radio1">alien</string>
    <string name="radio2">orbit</string>
    <string name="radio3">comet</string>

    <!-- Activity Titles -->
    <string name="favourite">Favourite List v1.0</string>
    <string name="picOfDay">Image of the Day v1.0</string>
    <string name="picRoulette">Picture Roulette v1.0</string>
    <string name="profile">Profile v1.0</string>

    <!-- Help menu -->
    <string name="intro">Welcome, </string>
    <string name="helpTitle">Help</string>
    <string name="helpheading">Explanation for each program:</string>
    <string name="profileHelp">Welcome, to your profile use this to add personal customization!</string>
    <string name="picOfDayHelp">Select the date picker at the bottom of the screen to start viewing images.
    You can also press the save button to save the image!</string>
    <string name="picRouletteHelp">Select the start button at the bottom of the screen to start viewing random images.
    You can also press the save button to save the image!</string>
    <string name="favouritesHelp">Tab on one of your favourite images to view that image! If you hold down on a
    selection you can delete it!</string>
    <string name="help1">1. Image of the Day: Enter a date to view or save the NASA image of the day!</string>
    <string name="help2">2. Picture Roulette: Picture roulette selects a random date to view!</string>
    <string name="help3">3. Favourites: View the previously selected favourites!</string>
    <string name="help4">4. Profile: View and update your profile!</string>


</resources>